tests/snapshots/s2_stamps_rows__rows_critical_immutable_batch.snap
---
source: tests/s2_stamps_rows.rs
expression: rows
---
[
    StampRow {
        label: "about-to-fail",
        batch_id_short: "dddddddd…",
        volume: "16.0 GiB",
        worst_bucket_pct: 98,
        worst_bucket_raw: "63/64",
        ttl: "5d  0h",
        ttl_seconds: 432000,
        immutable: true,
        status: Critical,
        why: Some(
            "immutable batch will REJECT next upload at this bucket.",
        ),
    },
]
