tests/snapshots/s2_stamps_rows__rows_critical_mutable_batch.snap
---
source: tests/s2_stamps_rows.rs
expression: rows
---
[
    StampRow {
        label: "mutable-near-full",
        batch_id_short: "eeeeeeee…",
        volume: "16.0 GiB",
        worst_bucket_pct: 98,
        worst_bucket_raw: "63/64",
        ttl: "5d  0h",
        ttl_seconds: 432000,
        immutable: false,
        status: Critical,
        why: Some(
            "mutable batch will silently overwrite oldest chunks.",
        ),
    },
]
