tests/snapshots/s2_stamps_rows__rows_multi_batch_mixed.snap
---
source: tests/s2_stamps_rows.rs
expression: rows
---
[
    StampRow {
        label: "prod-mainnet",
        batch_id_short: "b1b1b1b1…",
        volume: "16.0 GiB",
        worst_bucket_pct: 21,
        worst_bucket_raw: "14/64",
        ttl: "47d  0h",
        ttl_seconds: 4060800,
        immutable: true,
        status: Healthy,
        why: None,
    },
    StampRow {
        label: "spillover",
        batch_id_short: "b2b2b2b2…",
        volume: "16.0 GiB",
        worst_bucket_pct: 85,
        worst_bucket_raw: "55/64",
        ttl: "12d  0h",
        ttl_seconds: 1036800,
        immutable: true,
        status: Skewed,
        why: Some(
            "worst bucket 85% > safe headroom — dilute or stop using.",
        ),
    },
    StampRow {
        label: "fresh-buy",
        batch_id_short: "b3b3b3b3…",
        volume: "16.0 GiB",
        worst_bucket_pct: 0,
        worst_bucket_raw: "0/64",
        ttl: "1d  0h",
        ttl_seconds: 86400,
        immutable: true,
        status: Pending,
        why: Some(
            "waiting on chain confirmation (~10 blocks).",
        ),
    },
]
