tests/snapshots/s2_stamps_rows__rows_pending_batch.snap
---
source: tests/s2_stamps_rows.rs
assertion_line: 72
expression: rows
---
[
    StampRow {
        label: "fresh-buy",
        batch_id_short: "aaaaaaaa…",
        volume: "16.0 GiB",
        worst_bucket_pct: 0,
        worst_bucket_raw: "0/64",
        ttl: "1d  0h",
        immutable: true,
        status: Pending,
        why: Some(
            "waiting on chain confirmation (~10 blocks).",
        ),
    },
]
