tests/snapshots/s2_stamps_rows__rows_skewed_batch.snap
---
source: tests/s2_stamps_rows.rs
expression: rows
---
[
    StampRow {
        label: "near-full",
        batch_id_short: "cccccccc…",
        volume: "16.0 GiB",
        worst_bucket_pct: 85,
        worst_bucket_raw: "55/64",
        ttl: "12d  0h",
        ttl_seconds: 1036800,
        immutable: true,
        status: Skewed,
        why: Some(
            "worst bucket 85% > safe headroom — dilute or stop using.",
        ),
    },
]
